# merge-mania

./: .gitignore  .gitlab-ci.yml  README.md
client/: README.md  package-lock.json  package.json
client/public/: index.html
client/src/: App.vue  auth.js  cookies.js  main.js  router.js
client/src/components/: Loader.vue
client/src/mod/: app.js  auth.js  game.js  ws.js
client/src/util/: cookies.js  format.js  session.js
client/src/views/: About.vue  Admin.vue  Game.vue  Home.vue  Leaderboard.vue  Login.vue  Outpost.vue  Scan.vue  Stats.vue
config/: config.toml
docs/: README.md  config.toml  game-design.md  items-sheet.ods  nginx.conf  template.toml
server/: .env.sample  Cargo.toml  Rocket.toml
server/public/: index.html
server/src/: auth.rs  config.rs  game.rs  lang.rs  main.rs  server.rs  state.rs  types.rs  util.rs
server/src/client/: action.rs  mod.rs  types.rs
server/src/config/: mod.rs  types.rs
server/src/game/: code.rs  mod.rs  types.rs
server/src/routes/: magic.rs  mod.rs  ws.rs
server/src/routes/api/: auth.rs
server/src/tests/: config.rs  mod.rs
server/src/web/: mod.rs
server/src/ws/: mod.rs
