[package]
name = "merge-mania-server"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls", "json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", branch = "master", version = "*" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
