[package]
name = "merge-mania-server"
version = "0.1.0"
edition = "2018"

[dependencies]
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tokio-stream = "0.1"
toml = "0.5"
warp = "0.3"
