[package]
name = "merge-mania-server"
description = "A real-time team based merging/trading game to play using your phone."
version = "0.1.0"
edition = "2018"

[[bin]]
name = "mms"
path = "src/main.rs"

[dependencies]
base64 = "0.13"
dotenv = "0.15"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
toml = "0.5"
warp = "0.3"
